app/assets/stylesheets/ai_annotation.css
.ai-annotation-form {
  margin-top: 30px;

  label {
    display: block;
    font-family: sans-serif, verdana, arial, helvetica;
    font-size: 1.5rem;
    font-weight: bold;
    color: rgb(56, 56, 56);
  }

  textarea {
    width: 100%;
    font-family: verdana, arial, helvetica, sans-serif;
    font-size: 1rem;
    padding: 10px;
    border: solid 1px #D9D9D9;
    border-radius: 12px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    resize: none;

    &:focus {
      outline: none;
      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
      transition: all 0.2s ease-in-out;
    }
  }

  .prompt-field {
    margin-top: 30px;
  }

  .submit-field {
    width: 100%;
    display: flex;
    justify-content: end;
    margin-top: 5px;
  }
}

.textae-container {
  margin-top: 40px;

  .textae-editor {
    overflow: hidden;
    border: solid 1px #D9D9D9;
    border-radius: 12px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

    .textae-editor__body {
      max-height: 600px;
      overflow-y: auto;
    }
  }
}

.button {
  padding: 8px 16px;
  border-radius: 9999px;
  background-color: rgb(56, 56, 56);
  color: white;
  border: none;
  font-size: 0.875rem;
  line-height: 20px;
  cursor: pointer;

  &:hover {
    background-color: #4C4C4C;
  }

  &:disabled {
    background-color: #8a909c;
    pointer-events: none;
    opacity: 0.6;
  }
}

